@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.yt-setup" name="Youtube Setup" version="2.0.0~beta2" provider-name="Twilight0">
+<addon id="plugin.program.yt-setup" name="Youtube Setup" version="2.0.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="plugin.video.youtube" version="5.4.0"/>
@@ -22,13 +22,17 @@
         <license>GNU GPL, version 2</license>
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.program.yt-setup</source>
-        <news>[B]+ 2.0.0[/B] ~ (04-04-2020)
+        <news>[B]+ 2.0.0[/B] ~ (06-04-2020)
 - Proper Python 3 support
 - Added support for hastebin.com
 - Removed "youtube.api.enable" setting for post 6.7.0 youtube addon versions
 - Added support for google's client.json file from the credentials screen
   > If api_key is not found in the json file, youtube setup will ask to be entered manually
-  > You can enter it in the file prior to the setup just by adding an additional key, see client.json example</news>
+  > You can enter it in the file prior to the setup just by adding an additional key, see client.json example
+- Added the following translations:
+  > Romanian: thanks to tmihai20
+  > Dutch: thanks to dagwieers
+  > Russian: thanks to vlmaksime</news>
         <assets>
             <icon>icon.png</icon>
             <fanart>fanart.jpg</fanart>
